# rinha-de-backend-2024-q1

./: .dockerignore  .env  Cargo.toml  Dockerfile  docker-compose.yml  up.bat
config/: init.sql  nginx.conf
migrations/: 20240218220644_init.sql
scripts/: build.bat  down.bat  stress.bat  stress.ps1
src/: main.rs
