[package]
name = "rinha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
chrono = { version = "0.4.34", features = ["serde"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "chrono"] }
